tests/compile_failures/wrong_setting_place_splitbits.stderr
error: proc macro panicked
 --> tests/compile_failures/wrong_setting_place_splitbits.rs:4:5
  |
4 |     splitbits!(0b11011101, min=u8, "aaabbccc");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the first argument to be a 'min' setting since three arguments were supplied

error: proc macro panicked
 --> tests/compile_failures/wrong_setting_place_splitbits.rs:5:5
  |
5 |     splitbits!(0b11011101, "aaabbccc", min=u8);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the first argument to be a 'min' setting since three arguments were supplied
